fixed double logo background on mobile devices

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -101,7 +101,7 @@ input, select, textarea {
 			content: ' ';
 			display: block;
 			background-image: url('../../images/Hearing Colors.jpg');
-			background-position: center center; 
+			background-position: bottom center; 
 			-webkit-background-size: contain;
 			-moz-background-size: contain;
 			-o-background-size: contain;
@@ -121,7 +121,7 @@ input, select, textarea {
 			content: ' ';
 			display: block;
 			background-image: url('../../images/Hearing Colors.jpg');
-			background-position: center center; 
+			background-position: bottom center; 
 			-webkit-background-size: contain;
 			-moz-background-size: contain;
 			-o-background-size: contain;
@@ -141,7 +141,7 @@ input, select, textarea {
 			content: ' ';
 			display: block;
 			background-image: url('../../images/Hearing Colors.jpg');
-			background-position: center center; 
+			background-position: bottom center; 
 			-webkit-background-size: contain;
 			-moz-background-size: contain;
 			-o-background-size: contain;
@@ -161,7 +161,7 @@ input, select, textarea {
 			content: ' ';
 			display: block;
 			background-image: url('../../images/Hearing Colors.jpg');
-			background-position: center center; 
+			background-position: bottom center; 
 			background-size: contain;
 			-webkit-background-size: contain;
 			-moz-background-size: contain;
@@ -174,7 +174,6 @@ input, select, textarea {
 			position: fixed;
 			z-index: -10; 
 		}
-
 	}
 	
 	@media screen and (max-width: 360px) {
@@ -182,7 +181,7 @@ input, select, textarea {
 			content: ' ';
 			display: block;
 			background-image: url('../../images/Hearing Colors.jpg');
-			background-position: center center; 
+			background-position: bottom center; 
 			-webkit-background-size: contain;
 			-moz-background-size: contain;
 			-o-background-size: contain;
